Fixed overflow problems in printed header
Also added "reference" footer (available on web & printed)

--- a/css/styles_print.css
+++ b/css/styles_print.css
@@ -27,6 +27,7 @@
     {
         margin: 0;
         padding: 0;
+        overflow:hidden !important;
     }
     
     article.achievements ul
